repaired center-align issues in Chrome

--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,9 @@ a {
   height: 100%;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  top:	50%;
+  left: 50%;
+  margin: -63% 0 0 -35%;
   z-index:5;
   position: absolute;
   text-align:center;
